hphp/hack/test/typecheck/await_in_coroutine4.php.exp
File "await_in_coroutine4.php", line 5, characters 17-21:
await is not allowed in coroutines. (NastCheck[3036])
