hphp/hack/test/typecheck/await_in_coroutine4.php
<?hh // strict

async function asyncFunction() {
  $a = coroutine function(AsyncIterator<string> $x) {
    foreach ($x await as $k => $v) {
      print $x;
    }
  };
}
